--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -1,11 +1,15 @@
 .main {
-  padding: 20px 20px 60px;
-  max-width: 680px;
+  padding: 0px;
   margin: 0 auto;
 }
 
 .hr {
   border: none;
   border-bottom: 1px solid #efefef;
-  margin: 3em auto;
+  margin: 1em auto;
+}
+
+.logo {
+  margin-left: 32px;
+  color: rgb(29, 29, 29);
 }
